--- a/public/cv.tex
+++ b/public/cv.tex
@@ -130,12 +130,12 @@ My research aims to bridge the gap between \textbf{optimization theory} and \tex
 
 % Awards
 \section{Awards \& Honors}
-\begin{tabu} to \textwidth { X[0.8,l] X[0.2,r] }
-    BK21 Future Innovation Talent Bronze Prize & 2023 \\
-    BK21 Outstanding Research Talent Fellowship & 2023 \\
-    Yulchon AI Star Scholarship & 2022 \\
-    3rd Place, SNU FastMRI Challenge & 2021 \\
-    Kwanak Scholarship & 2021 \\
+\begin{tabu} to \textwidth { X[0.7,l] X[0.3,r] }
+    BK21 Future Innovation Talent Bronze Prize (KRW 1,000,000) & 2023 \\
+    BK21 Outstanding Research Talent Fellowship (KRW 3,500,000) & 2023 \\
+    Yulchon AI Star Scholarship (KRW 8,000,000) & 2022 \\
+    3rd Place, SNU FastMRI Challenge (KRW 3,000,000) & 2021 \\
+    Kwanak Scholarship (KRW 4,000,000) & 2021 \\
     National Science and Engineering Scholarship & 2017
 \end{tabu}
 
